# jin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
apps/jin-server/: Cargo.toml
apps/jin-server/src/: api.rs  main.rs
apps/jin-supervisor/: Cargo.toml
apps/jin-supervisor/src/: main.rs
apps/jin-web/: Cargo.toml
apps/jin-web-client/: index.html  package-lock.json  package.json  vite.config.ts
apps/jin-web-client/src/: App.test.tsx  App.tsx  styles.css
apps/jin-web-client/src/api/: client.test.ts  client.ts  types.ts
apps/jin-web-client/src/components/: AppShell.test.tsx  AppShell.tsx  ChatView.test.tsx  ChatView.tsx  DocsView.tsx  FactoriesView.test.tsx  FactoriesView.tsx  NewChat.test.tsx  NewChat.tsx  SettingsView.tsx
apps/jin-web-client/src/hooks/: useChatProgress.test.tsx  useJinData.ts  (+1 more)
apps/jin-web/src/: main.rs  web.rs
crates/jin-core/: Cargo.toml
crates/jin-core/src/: chat.rs  command.rs  factory.rs  lib.rs  orchestrator.rs  policy.rs  repository.rs  runner.rs  store.rs  sync.rs  task.rs  telegram.rs  version.rs
docs/superpowers/plans/: 2026-05-03-jin-initial-implementation.md  2026-05-03-jin-local-mvp.md  2026-05-03-jin-web-frontend.md  2026-05-03-native-chat-wrapper.md  2026-05-04-jin-web-client-redesign.md  2026-05-07-jin-content-factory-mvp.md
docs/superpowers/specs/: 2026-05-02-jin-agent-master-design.md  2026-05-03-jin-web-client-redesign.md  2026-05-03-native-chat-wrapper-design.md  2026-05-07-jin-content-factory-design.md
packaging/web-client/: server.mjs
scripts/: install.sh  install.test.sh  package.sh
