[package]
name = "jin-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
jin-core = { path = "../../crates/jin-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
tower.workspace = true
